<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainEnProceso" >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnProceEstadis"
        android:orientation="vertical"
         >
        
        <TableLayout
        android:id="@+id/Layout_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"    
        android:layout_marginBottom="10dp" >
 
        <TextView
            android:id="@+id/textView13"
            style="@style/cuadroDeTexto"
            android:gravity="center_horizontal"
            android:text="@string/lblEn_proceso"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow android:id="@+id/tableRow1" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/cuadroDeTexto"
                    android:layout_weight="1"
                    android:text="@string/lblFacultad"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/cuadroDeTexto"
                    android:layout_weight="1"
                    android:text="@string/lblMatriculados"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/cuadroDeTexto"
                    android:layout_weight="1"
                    android:text="@string/lblPorcentaje"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <ListView
                android:id="@+id/lvProcesos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>

        </TableLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            style="@style/cuadroDeTexto"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/comentario"
            android:textSize="5pt" />
         <Button
        android:id="@+id/btnProceEstadis"
        style="@style/btnEstadisticas"
        android:layout_above="@+id/textView14"
        android:onClick="ingresar"
        android:text="@string/btnEstadisticas" />

</RelativeLayout>