<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/upeu"
    tools:context=".MainPorFacultades" >

    <LinearLayout
        android:id="@+id/layout_campos"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tituloFacultades"
                style="@style/cuadroDeTexto"
                android:gravity="center_horizontal"
                android:text="@string/menuFacultades"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow 
                
                android:id="@+id/tableRow1"
                android:background="@drawable/degradado1"
                android:layout_width="match_parent"
                android:layout_height="1000pt"
                  >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/cuadroDeTexto"
                    android:layout_weight="1"
                    android:text="@string/lblFacultad"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/cuadroDeTexto"
                    android:layout_weight="1"
                    android:text="@string/lblMatriculados"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/cuadroDeTexto"
                    android:layout_weight="1"
                    android:text="@string/lblPorcentaje"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
 			
       	
            <ListView
                android:id="@+id/lvFacultades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
			
        </TableLayout>
    </LinearLayout>

</RelativeLayout>
